service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
  labels:
    app: podinfo

spec:
  type: ClusterIP

  selector:
    app: podinfo

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9898
